# balas

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: cargo_test.yml
samples/: 6vars_f32_3constraints.lp  parallel.lp  proposal_demo.lp  simple.lp  v006c016.lp  v006c032.lp  v006c064.lp  v032c032.lp  v048c048.lp  v048c128.lp  v064c064.lp  v064c064.mps  v064c200.mps
src/: lib.rs  lp_errors.rs  lp_format.rs  lp_reader.rs  lpformat.rs  main.rs  recursive_solver.rs
src/samples/: 6vars_f32_3constraints.lp
