[package]
name = "balas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
argh = "0.1.12"
bit-vec = "0.6.3"
lp_parser_rs = {git = "https://github.com/dandxy89/lp_parser_rs"}
num = "0.4.1"
thiserror = "1.0.52"
